# sfml-snake

./: .gitignore  README.md
snake/: .gitignore  CMakeLists.txt  main.cpp
snake/headers/: food.hpp  game.hpp  menu.hpp  snake.hpp  snakesection.hpp  utils.hpp  wall.hpp
snake/src/: draw.cpp  food.cpp  game.cpp  input.cpp  main.cpp  menu.cpp  snake.cpp  snakesection.cpp  update.cpp  utils.cpp  wall.cpp
